Fix Import's h1 being too low

--- a/MemoryMosaic/Styles/Import.scss
+++ b/MemoryMosaic/Styles/Import.scss
@@ -6,9 +6,11 @@
 
 h1 {
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 100%;
+    text-align: center;
 }
 
 header {
